--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/voice": "^1.1.9",
     "@react-navigation/native-stack": "^6.8.0",
     "link": "^1.5.1",
     "react": "18.1.0",
@@ -18,9 +19,7 @@
     "react-native-gesture-handler": "^2.6.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0",
-    "react-native-speech": "^0.1.2",
-    "react-native-tts": "^4.1.0"
+    "react-native-screens": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
